Ft/email verify (#18)
* email verify functional with using redis

* gRPC api unit tests

* gRPC api unit tests
